--- a/duck-rpc-core/pom.xml
+++ b/duck-rpc-core/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -8,12 +10,8 @@
     </parent>
 
     <groupId>com.jiang</groupId>
-    <artifactId>example-provider</artifactId>
+    <artifactId>duck-rpc-core</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-    <name>example-provider</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -22,23 +20,20 @@
     </properties>
 
     <dependencies>
-<!--        rpc-cpre-->
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+
         <dependency>
-            <groupId>com.jiang</groupId>
-            <artifactId>duck-rpc-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
         </dependency>
-        <!--    rpc-->
-<!--        <dependency>-->
-<!--            <groupId>com.jiang</groupId>-->
-<!--            <artifactId>duck-rpc-easy</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
-        <!--    common服务-->
+        <!--        引入vertx web服务器-->
+        <!-- https://mvnrepository.com/artifact/io.vertx/vertx-core -->
         <dependency>
-            <groupId>com.jiang</groupId>
-            <artifactId>example-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-core</artifactId>
+            <version>4.5.1</version>
         </dependency>
 
         <dependency>
@@ -46,6 +41,7 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.8</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -54,11 +50,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+<!--        打印日志，配置lombok-->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.3.12</version>
+<!--            <scope>test</scope> 去掉test-->
         </dependency>
     </dependencies>
+
 </project>
