--- a/example-consumer/pom.xml
+++ b/example-consumer/pom.xml
@@ -15,16 +15,25 @@
     <url>http://maven.apache.org</url>
 
     <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
-        <!--    rpc-->
+<!--        rpc-core-->
         <dependency>
             <groupId>com.jiang</groupId>
-            <artifactId>duck-rpc-easy</artifactId>
+            <artifactId>duck-rpc-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!--    rpc-->
+<!--        <dependency>-->
+<!--            <groupId>com.jiang</groupId>-->
+<!--            <artifactId>duck-rpc-easy</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
         <!--    common服务-->
         <dependency>
             <groupId>com.jiang</groupId>
