--- a/duck-rpc-core/pom.xml
+++ b/duck-rpc-core/pom.xml
@@ -20,6 +20,14 @@
     </properties>
 
     <dependencies>
+<!--         重试机制-->
+        <!-- https://mvnrepository.com/artifact/com.github.rholder/guava-retrying -->
+        <dependency>
+            <groupId>com.github.rholder</groupId>
+            <artifactId>guava-retrying</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/io.etcd/jetcd-core -->
         <dependency>
