--- a/example-consumer/src/main/Resources/application.properties
+++ b/example-consumer/src/main/Resources/application.properties
@@ -3,4 +3,5 @@ rpc.version=2.0
 rpc.mock=false
 rpc.serializer=kryo
 rpc.serverHost=localhost
-rpc.serverPort=8083
+rpc.serverPort=8085
+rpc.retry=fixInterval
